# practicallan

./: LICENSE  README.md  pyproject.toml
src/practicallan/: __init__.py  solver.py
tests/: tests.py
